<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextDeptCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewDeptCode"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:singleLine="true"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewDeptCode"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editTextDeptCode"
        android:text="@string/enterDeptCode"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonDeptCodeNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextDeptCode"
        android:layout_toRightOf="@+id/editTextDeptCode"
        android:text="@string/deptcodenext"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tryAgain"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBarDeptScreen"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewDeptScreenLoadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDeptCode"
        android:layout_centerHorizontal="true"
        android:text="@string/txtDeptCodeScreenLoadData"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

</RelativeLayout>