<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/tableLayoutLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginname"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinnerTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginevent"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinnerEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/inloggen"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />
    
      

    <TextView
        android:id="@+id/TextViewLoginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBarLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/txtLoginLoading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonTryAgainLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/tryAgain"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonSynchronize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txtButtonSynchronize" />

    <TextView
        android:id="@+id/textViewSynchronizeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSynchronize"
        android:layout_alignRight="@+id/buttonSynchronize"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>